# sims4-pixel-mod-manager

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  BUILD.md  CHANGELOG.md  CI_CD_FIX_SUMMARY.md  CI_CD_QUICK_REF.md  CI_CD_SUMMARY.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_REPORT.md  DEPLOY.md  DISTRIBUTION_CHECKLIST.md  DOCUMENTATION_SUMMARY.md  LICENSE  LOAD_ORDER_API_NOTES.md  PACKAGING_QUICK_REF.md  PACKAGING_SUMMARY.md  QUICKSTART.md  README.md  SPRINT1_COMPLETE.md  SPRINT2_COMPLETE.md  STARTUP_FIX_SUMMARY.md  TESTING_QUICK_REF.md  TEST_FIX_GUIDE.md  TEST_SUITE_SUMMARY.md  build.py  build.spec  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
.github/: CI_CD_GUIDE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: README.md
assets/fonts/: .gitkeep
assets/icons/: icon.icns
config/: defaults.json
docs/: DEVELOPER.md  INSTALLATION.md  POLISH_GUIDE.md  README.md  USER_GUIDE.md
scripts/: build_installer.py  generate_icons.py
src/: __init__.py
src/core/: __init__.py  conflict_detector.py  deploy_engine.py  exceptions.py  installer.py  load_order.py  load_order_engine.py  mod_scanner.py  scanner.py  security.py  state_manager.py
src/ui/: __init__.py  animations.py  main_window.py  pixel_theme.py  splash_screen.py
src/ui/dialogs/: __init__.py  confirm_dialog.py  error_dialog.py  progress_dialog.py  settings_dialog.py  update_dialog.py  wizard_dialog.py
src/ui/widgets/: __init__.py  chunky_frame.py  pixel_button.py  pixel_listbox.py  progress_bar.py
src/utils/: backup.py  config_manager.py  game_detector.py  logger.py  process_manager.py  timeout.py  updater.py
tests/: README.md  __init__.py  conftest.py  test_installer.py  test_installer_edge_cases.py  test_integration.py  test_load_order.py  test_mod_scanner_coverage.py  test_process_manager_coverage.py  test_scanner.py  test_security.py  test_security_coverage.py  test_updater_coverage.py
tests/core/: test_conflict_detector.py  test_deploy_engine.py  test_exceptions.py  test_load_order_engine.py  test_mod_scanner.py  test_security_coverage.py  test_state_manager.py
tests/ui/: conftest.py  test_animations.py  test_dialogs_coverage.py  test_main_window.py  test_pixel_theme.py  test_widgets_coverage.py
tests/utils/: test_backup.py  test_config_manager.py  test_game_detector.py  test_logger.py  test_process_manager.py  test_timeout.py  test_updater.py
